nacl/csound_orcparse.output
Terminals which are not used

   S_BITSHIFT_RRIGHT
   UDO_TOKEN
   T_ERROR
   T_INSTLIST
   S_ELIPSIS
   T_ARRAY
   T_ARRAY_IDENT
   T_MAPI
   T_MAPK
   S_GEQ
   S_LEQ
   S_ATAT
   S_AT
   S_GOTO
   T_HIGHEST


State 105 conflicts: 3 reduce/reduce
State 159 conflicts: 1 shift/reduce, 1 reduce/reduce
State 258 conflicts: 3 reduce/reduce
State 259 conflicts: 3 reduce/reduce
State 277 conflicts: 3 shift/reduce


Grammar

    0 $accept: orcfile $end

    1 orcfile: rootstatement

    2 rootstatement: rootstatement topstatement
    3              | rootstatement instrdecl
    4              | rootstatement udodecl
    5              | topstatement
    6              | instrdecl
    7              | udodecl

    8 instlist: INTEGER_TOKEN ',' instlist
    9         | label ',' instlist
   10         | '+' label ',' instlist
   11         | '+' label
   12         | INTEGER_TOKEN
   13         | label

   14 @1: /* empty */

   15 @2: /* empty */

   16 instrdecl: INSTR_TOKEN @1 instlist NEWLINE @2 statementlist ENDIN_TOKEN NEWLINE
   17          | INSTR_TOKEN NEWLINE error

   18 udoname: T_IDENT
   19        | T_OPCODE
   20        | T_OPCODE0

   21 @3: /* empty */

   22 @4: /* empty */

   23 @5: /* empty */

   24 @6: /* empty */

   25 @7: /* empty */

   26 udodecl: UDOSTART_DEFINITION @3 udoname @4 ',' @5 UDO_ANS_TOKEN @6 ',' UDO_ARGS_TOKEN NEWLINE @7 statementlist UDOEND_TOKEN NEWLINE

   27 statementlist: statementlist statement
   28              | /* empty */

   29 topstatement: rident '=' expr NEWLINE
   30             | statement

   31 statement: ident '=' expr NEWLINE
   32          | ident S_ADDIN expr NEWLINE
   33          | ident S_SUBIN expr NEWLINE
   34          | ident S_MULIN expr NEWLINE
   35          | ident S_DIVIN expr NEWLINE
   36          | arrayexpr '=' expr NEWLINE
   37          | arrayident '=' expr NEWLINE
   38          | ans opcode exprlist NEWLINE
   39          | opcode0 exprlist NEWLINE
   40          | opcode0b exprlist ')' NEWLINE
   41          | LABEL_TOKEN
   42          | goto label NEWLINE
   43          | IF_TOKEN bexpr goto label NEWLINE
   44          | ifthen
   45          | UNTIL_TOKEN bexpr DO_TOKEN statementlist OD_TOKEN
   46          | NEWLINE

   47 ans: ident
   48    | arrayident
   49    | arrayexpr
   50    | T_IDENT error
   51    | ans ',' ident
   52    | ans ',' T_IDENT error
   53    | ans ',' arrayident
   54    | ans ',' arrayexpr

   55 arrayexpr: arrayexpr '[' iexp ']'
   56          | ident '[' iexp ']'

   57 ifthen: IF_TOKEN bexpr then NEWLINE statementlist ENDIF_TOKEN NEWLINE
   58       | IF_TOKEN bexpr then NEWLINE statementlist ELSE_TOKEN statementlist ENDIF_TOKEN NEWLINE
   59       | IF_TOKEN bexpr then NEWLINE statementlist elseiflist ENDIF_TOKEN NEWLINE
   60       | IF_TOKEN bexpr then NEWLINE statementlist elseiflist ELSE_TOKEN statementlist ENDIF_TOKEN NEWLINE

   61 elseiflist: elseiflist elseif
   62           | elseif

   63 elseif: ELSEIF_TOKEN bexpr then NEWLINE statementlist

   64 then: THEN_TOKEN
   65     | KTHEN_TOKEN
   66     | ITHEN_TOKEN

   67 goto: GOTO_TOKEN
   68     | KGOTO_TOKEN
   69     | IGOTO_TOKEN

   70 label: T_OPCODE
   71      | T_OPCODE0
   72      | T_FUNCTION
   73      | T_IDENT
   74      | IF_TOKEN
   75      | THEN_TOKEN
   76      | ITHEN_TOKEN
   77      | KTHEN_TOKEN
   78      | ELSEIF_TOKEN
   79      | ENDIF_TOKEN
   80      | UNTIL_TOKEN
   81      | DO_TOKEN
   82      | OD_TOKEN
   83      | INTEGER_TOKEN
   84      | ENDIN_TOKEN

   85 exprlist: exprlist ',' expr
   86         | exprlist ',' label
   87         | exprlist ',' error
   88         | expr
   89         | bexpr
   90         | T_IDENT
   91         | T_OPCODE
   92         | T_FUNCTION
   93         | /* empty */

   94 bexpr: '(' bexpr ')'
   95      | expr S_LE expr
   96      | expr S_LE error
   97      | expr S_GE expr
   98      | expr S_GE error
   99      | expr S_NEQ expr
  100      | expr S_NEQ error
  101      | expr S_EQ expr
  102      | expr S_EQ error
  103      | expr '=' expr
  104      | expr '=' error
  105      | expr S_GT expr
  106      | expr S_GT error
  107      | expr S_LT expr
  108      | expr S_LT error
  109      | bexpr S_AND bexpr
  110      | bexpr S_AND error
  111      | bexpr S_OR bexpr
  112      | bexpr S_OR error
  113      | '!' bexpr
  114      | '!' error

  115 expr: bexpr '?' expr ':' expr
  116     | bexpr '?' expr ':' error
  117     | bexpr '?' expr error
  118     | bexpr '?' error
  119     | iexp

  120 iexp: iexp '+' iexp
  121     | iexp '+' error
  122     | iexp '-' iexp
  123     | iexp '-' error
  124     | '-' iexp
  125     | '-' error
  126     | '+' iexp
  127     | '+' error
  128     | iterm

  129 iterm: iexp '*' iexp
  130      | iexp '*' error
  131      | iexp '/' iexp
  132      | iexp '/' error
  133      | iexp '^' iexp
  134      | iexp '^' error
  135      | iexp '%' iexp
  136      | iexp '%' error
  137      | ifac

  138 ifac: ident
  139     | constant
  140     | arrayexpr
  141     | iexp '|' iexp
  142     | iexp '|' error
  143     | iexp '&' iexp
  144     | iexp '&' error
  145     | iexp '#' iexp
  146     | iexp '#' error
  147     | iexp S_BITSHIFT_LEFT iexp
  148     | iexp S_BITSHIFT_LEFT error
  149     | iexp S_BITSHIFT_RIGHT iexp
  150     | iexp S_BITSHIFT_RIGHT error
  151     | '~' iexp
  152     | '~' error
  153     | '(' expr ')'
  154     | '(' expr error
  155     | '(' error
  156     | identb exprlist ')'
  157     | opcode ':' identb exprlist ')'
  158     | opcode ':' opcodeb exprlist ')'
  159     | opcodeb exprlist ')'
  160     | identb error
  161     | opcodeb error

  162 rident: SRATE_TOKEN
  163       | KRATE_TOKEN
  164       | KSMPS_TOKEN
  165       | NCHNLS_TOKEN
  166       | NCHNLSI_TOKEN
  167       | ZERODBFS_TOKEN

  168 arrayident: arrayident '[' ']'
  169           | ident '[' ']'

  170 ident: T_IDENT

  171 identb: T_IDENTB

  172 constant: INTEGER_TOKEN
  173         | NUMBER_TOKEN
  174         | STRING_TOKEN
  175         | SRATE_TOKEN
  176         | KRATE_TOKEN
  177         | KSMPS_TOKEN
  178         | NCHNLS_TOKEN
  179         | NCHNLSI_TOKEN
  180         | ZERODBFS_TOKEN

  181 opcode0: T_OPCODE0

  182 opcode0b: T_OPCODE0B

  183 opcode: T_OPCODE
  184       | T_FUNCTION

  185 opcodeb: T_OPCODEB
  186        | T_FUNCTIONB


Terminals, with rules where they appear

$end (0) 0
'!' (33) 113 114
'#' (35) 145 146
'%' (37) 135 136
'&' (38) 143 144
'(' (40) 94 153 154 155
')' (41) 40 94 153 156 157 158 159
'*' (42) 129 130
'+' (43) 10 11 120 121 126 127
',' (44) 8 9 10 26 51 52 53 54 85 86 87
'-' (45) 122 123 124 125
'/' (47) 131 132
':' (58) 115 116 157 158
'=' (61) 29 31 36 37 103 104
'?' (63) 115 116 117 118
'[' (91) 55 56 168 169
']' (93) 55 56 168 169
'^' (94) 133 134
'|' (124) 141 142
'~' (126) 151 152
error (256) 17 50 52 87 96 98 100 102 104 106 108 110 112 114 116 117
    118 121 123 125 127 130 132 134 136 142 144 146 148 150 152 154
    155 160 161
NEWLINE (258) 16 17 26 29 31 32 33 34 35 36 37 38 39 40 42 43 46 57
    58 59 60 63
S_NEQ (259) 99 100
S_AND (260) 109 110
S_OR (261) 111 112
S_LT (262) 107 108
S_LE (263) 95 96
S_EQ (264) 101 102
S_ADDIN (265) 32
S_SUBIN (266) 33
S_MULIN (267) 34
S_DIVIN (268) 35
S_GT (269) 105 106
S_GE (270) 97 98
S_BITSHIFT_LEFT (271) 147 148
S_BITSHIFT_RRIGHT (272)
LABEL_TOKEN (273) 41
IF_TOKEN (274) 43 57 58 59 60 74
T_OPCODE0 (275) 20 71 181
T_OPCODE0B (276) 182
T_OPCODE (277) 19 70 91 183
T_OPCODEB (278) 185
UDO_TOKEN (279)
UDOSTART_DEFINITION (280) 26
UDOEND_TOKEN (281) 26
UDO_ANS_TOKEN (282) 26
UDO_ARGS_TOKEN (283) 26
T_ERROR (284)
T_FUNCTION (285) 72 92 184
T_FUNCTIONB (286) 186
INSTR_TOKEN (287) 16 17
ENDIN_TOKEN (288) 16 84
GOTO_TOKEN (289) 67
KGOTO_TOKEN (290) 68
IGOTO_TOKEN (291) 69
SRATE_TOKEN (292) 162 175
KRATE_TOKEN (293) 163 176
KSMPS_TOKEN (294) 164 177
NCHNLS_TOKEN (295) 165 178
NCHNLSI_TOKEN (296) 166 179
ZERODBFS_TOKEN (297) 167 180
STRING_TOKEN (298) 174
T_IDENT (299) 18 50 52 73 90 170
T_IDENTB (300) 171
INTEGER_TOKEN (301) 8 12 83 172
NUMBER_TOKEN (302) 173
THEN_TOKEN (303) 64 75
ITHEN_TOKEN (304) 66 76
KTHEN_TOKEN (305) 65 77
ELSEIF_TOKEN (306) 63 78
ELSE_TOKEN (307) 58 60
ENDIF_TOKEN (308) 57 58 59 60 79
UNTIL_TOKEN (309) 45 80
DO_TOKEN (310) 45 81
OD_TOKEN (311) 45 82
T_INSTLIST (312)
S_ELIPSIS (313)
T_ARRAY (314)
T_ARRAY_IDENT (315)
T_MAPI (316)
T_MAPK (317)
S_GEQ (318)
S_LEQ (319)
S_BITSHIFT_RIGHT (320) 149 150
S_UNOT (321)
S_UMINUS (322)
S_ATAT (323)
S_AT (324)
S_GOTO (325)
T_HIGHEST (326)


Nonterminals, with rules where they appear

$accept (91)
    on left: 0
orcfile (92)
    on left: 1, on right: 0
rootstatement (93)
    on left: 2 3 4 5 6 7, on right: 1 2 3 4
instlist (94)
    on left: 8 9 10 11 12 13, on right: 8 9 10 16
instrdecl (95)
    on left: 16 17, on right: 3 6
@1 (96)
    on left: 14, on right: 16
@2 (97)
    on left: 15, on right: 16
udoname (98)
    on left: 18 19 20, on right: 26
udodecl (99)
    on left: 26, on right: 4 7
@3 (100)
    on left: 21, on right: 26
@4 (101)
    on left: 22, on right: 26
@5 (102)
    on left: 23, on right: 26
@6 (103)
    on left: 24, on right: 26
@7 (104)
    on left: 25, on right: 26
statementlist (105)
    on left: 27 28, on right: 16 26 27 45 57 58 59 60 63
topstatement (106)
    on left: 29 30, on right: 2 5
statement (107)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46,
    on right: 27 30
ans (108)
    on left: 47 48 49 50 51 52 53 54, on right: 38 51 52 53 54
arrayexpr (109)
    on left: 55 56, on right: 36 49 54 55 140
ifthen (110)
    on left: 57 58 59 60, on right: 44
elseiflist (111)
    on left: 61 62, on right: 59 60 61
elseif (112)
    on left: 63, on right: 61 62
then (113)
    on left: 64 65 66, on right: 57 58 59 60 63
goto (114)
    on left: 67 68 69, on right: 42 43
label (115)
    on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84,
    on right: 9 10 11 13 42 43 86
exprlist (116)
    on left: 85 86 87 88 89 90 91 92 93, on right: 38 39 40 85 86 87
    156 157 158 159
bexpr (117)
    on left: 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108
    109 110 111 112 113 114, on right: 43 45 57 58 59 60 63 89 94 109
    110 111 112 113 115 116 117 118
expr (118)
    on left: 115 116 117 118 119, on right: 29 31 32 33 34 35 36 37
    85 88 95 96 97 98 99 100 101 102 103 104 105 106 107 108 115 116
    117 153 154
iexp (119)
    on left: 120 121 122 123 124 125 126 127 128, on right: 55 56 119
    120 121 122 123 124 126 129 130 131 132 133 134 135 136 141 142
    143 144 145 146 147 148 149 150 151
iterm (120)
    on left: 129 130 131 132 133 134 135 136 137, on right: 128
ifac (121)
    on left: 138 139 140 141 142 143 144 145 146 147 148 149 150 151
    152 153 154 155 156 157 158 159 160 161, on right: 137
rident (122)
    on left: 162 163 164 165 166 167, on right: 29
arrayident (123)
    on left: 168 169, on right: 37 48 53 168
ident (124)
    on left: 170, on right: 31 32 33 34 35 47 51 56 138 169
identb (125)
    on left: 171, on right: 156 157 160
constant (126)
    on left: 172 173 174 175 176 177 178 179 180, on right: 139
opcode0 (127)
    on left: 181, on right: 39
opcode0b (128)
    on left: 182, on right: 40
opcode (129)
    on left: 183 184, on right: 38 157 158
opcodeb (130)
    on left: 185 186, on right: 158 159 161


state 0

    0 $accept: . orcfile $end
    1 orcfile: . rootstatement
    2 rootstatement: . rootstatement topstatement
    3              | . rootstatement instrdecl
    4              | . rootstatement udodecl
    5              | . topstatement
    6              | . instrdecl
    7              | . udodecl
   16 instrdecl: . INSTR_TOKEN @1 instlist NEWLINE @2 statementlist ENDIN_TOKEN NEWLINE
   17          | . INSTR_TOKEN NEWLINE error
   26 udodecl: . UDOSTART_DEFINITION @3 udoname @4 ',' @5 UDO_ANS_TOKEN @6 ',' UDO_ARGS_TOKEN NEWLINE @7 statementlist UDOEND_TOKEN NEWLINE
   29 topstatement: . rident '=' expr NEWLINE
   30             | . statement
   31 statement: . ident '=' expr NEWLINE
   32          | . ident S_ADDIN expr NEWLINE
   33          | . ident S_SUBIN expr NEWLINE
   34          | . ident S_MULIN expr NEWLINE
   35          | . ident S_DIVIN expr NEWLINE
   36          | . arrayexpr '=' expr NEWLINE
   37          | . arrayident '=' expr NEWLINE
   38          | . ans opcode exprlist NEWLINE
   39          | . opcode0 exprlist NEWLINE
   40          | . opcode0b exprlist ')' NEWLINE
   41          | . LABEL_TOKEN
   42          | . goto label NEWLINE
   43          | . IF_TOKEN bexpr goto label NEWLINE
   44          | . ifthen
   45          | . UNTIL_TOKEN bexpr DO_TOKEN statementlist OD_TOKEN
   46          | . NEWLINE
   47 ans: . ident
   48    | . arrayident
   49    | . arrayexpr
   50    | . T_IDENT error
   51    | . ans ',' ident
   52    | . ans ',' T_IDENT error
   53    | . ans ',' arrayident
   54    | . ans ',' arrayexpr
   55 arrayexpr: . arrayexpr '[' iexp ']'
   56          | . ident '[' iexp ']'
   57 ifthen: . IF_TOKEN bexpr then NEWLINE statementlist ENDIF_TOKEN NEWLINE
   58       | . IF_TOKEN bexpr then NEWLINE statementlist ELSE_TOKEN statementlist ENDIF_TOKEN NEWLINE
   59       | . IF_TOKEN bexpr then NEWLINE statementlist elseiflist ENDIF_TOKEN NEWLINE
   60       | . IF_TOKEN bexpr then NEWLINE statementlist elseiflist ELSE_TOKEN statementlist ENDIF_TOKEN NEWLINE
   67 goto: . GOTO_TOKEN
   68     | . KGOTO_TOKEN
   69     | . IGOTO_TOKEN
  162 rident: . SRATE_TOKEN
  163       | . KRATE_TOKEN
  164       | . KSMPS_TOKEN
  165       | . NCHNLS_TOKEN
  166       | . NCHNLSI_TOKEN
  167       | . ZERODBFS_TOKEN
  168 arrayident: . arrayident '[' ']'
  169           | . ident '[' ']'
  170 ident: . T_IDENT
  181 opcode0: . T_OPCODE0
  182 opcode0b: . T_OPCODE0B

    NEWLINE              shift, and go to state 1
    LABEL_TOKEN          shift, and go to state 2
    IF_TOKEN             shift, and go to state 3
    T_OPCODE0            shift, and go to state 4
    T_OPCODE0B           shift, and go to state 5
    UDOSTART_DEFINITION  shift, and go to state 6
    INSTR_TOKEN          shift, and go to state 7
    GOTO_TOKEN           shift, and go to state 8
    KGOTO_TOKEN          shift, and go to state 9
    IGOTO_TOKEN          shift, and go to state 10
    SRATE_TOKEN          shift, and go to state 11
    KRATE_TOKEN          shift, and go to state 12
    KSMPS_TOKEN          shift, and go to state 13
    NCHNLS_TOKEN         shift, and go to state 14
    NCHNLSI_TOKEN        shift, and go to state 15
    ZERODBFS_TOKEN       shift, and go to state 16
    T_IDENT              shift, and go to state 17
    UNTIL_TOKEN          shift, and go to state 18

    orcfile        go to state 19
    rootstatement  go to state 20
    instrdecl      go to state 21
    udodecl        go to state 22
    topstatement   go to state 23
    statement      go to state 24
    ans            go to state 25
    arrayexpr      go to state 26
    ifthen         go to state 27
    goto           go to state 28
    rident         go to state 29
    arrayident     go to state 30
    ident          go to state 31
    opcode0        go to state 32
    opcode0b       go to state 33


state 1

   46 statement: NEWLINE .

    $default  reduce using rule 46 (statement)


state 2

   41 statement: LABEL_TOKEN .

    $default  reduce using rule 41 (statement)


state 3

   43 statement: IF_TOKEN . bexpr goto label NEWLINE
   55 arrayexpr: . arrayexpr '[' iexp ']'
   56          | . ident '[' iexp ']'
   57 ifthen: IF_TOKEN . bexpr then NEWLINE statementlist ENDIF_TOKEN NEWLINE
   58       | IF_TOKEN . bexpr then NEWLINE statementlist ELSE_TOKEN statementlist ENDIF_TOKEN NEWLINE
   59       | IF_TOKEN . bexpr then NEWLINE statementlist elseiflist ENDIF_TOKEN NEWLINE
   60       | IF_TOKEN . bexpr then NEWLINE statementlist elseiflist ELSE_TOKEN statementlist ENDIF_TOKEN NEWLINE
   94 bexpr: . '(' bexpr ')'
   95      | . expr S_LE expr
   96      | . expr S_LE error
   97      | . expr S_GE expr
   98      | . expr S_GE error
   99      | . expr S_NEQ expr
  100      | . expr S_NEQ error
  101      | . expr S_EQ expr
  102      | . expr S_EQ error
  103      | . expr '=' expr
  104      | . expr '=' error
  105      | . expr S_GT expr
  106      | . expr S_GT error
  107      | . expr S_LT expr
  108      | . expr S_LT error
  109      | . bexpr S_AND bexpr
  110      | . bexpr S_AND error
  111      | . bexpr S_OR bexpr
  112      | . bexpr S_OR error
  113      | . '!' bexpr
  114      | . '!' error
  115 expr: . bexpr '?' expr ':' expr
  116     | . bexpr '?' expr ':' error
  117     | . bexpr '?' expr error
  118     | . bexpr '?' error
  119     | . iexp
  120 iexp: . iexp '+' iexp
  121     | . iexp '+' error
  122     | . iexp '-' iexp
  123     | . iexp '-' error
  124     | . '-' iexp
  125     | . '-' error
  126     | . '+' iexp
  127     | . '+' error
  128     | . iterm
  129 iterm: . iexp '*' iexp
  130      | . iexp '*' error
  131      | . iexp '/' iexp
  132      | . iexp '/' error
  133      | . iexp '^' iexp
  134      | . iexp '^' error
  135      | . iexp '%' iexp
  136      | . iexp '%' error
  137      | . ifac
  138 ifac: . ident
  139     | . constant
  140     | . arrayexpr
  141     | . iexp '|' iexp
  142     | . iexp '|' error
  143     | . iexp '&' iexp
  144     | . iexp '&' error
  145     | . iexp '#' iexp
  146     | . iexp '#' error
  147     | . iexp S_BITSHIFT_LEFT iexp
  148     | . iexp S_BITSHIFT_LEFT error
  149     | . iexp S_BITSHIFT_RIGHT iexp
  150     | . iexp S_BITSHIFT_RIGHT error
  151     | . '~' iexp
  152     | . '~' error
  153     | . '(' expr ')'
  154     | . '(' expr error
  155     | . '(' error
  156     | . identb exprlist ')'
  157     | . opcode ':' identb exprlist ')'
  158     | . opcode ':' opcodeb exprlist ')'
  159     | . opcodeb exprlist ')'
  160     | . identb error
  161     | . opcodeb error
  170 ident: . T_IDENT
  171 identb: . T_IDENTB
  172 constant: . INTEGER_TOKEN
  173         | . NUMBER_TOKEN
  174         | . STRING_TOKEN
  175         | . SRATE_TOKEN
  176         | . KRATE_TOKEN
  177         | . KSMPS_TOKEN
  178         | . NCHNLS_TOKEN
  179         | . NCHNLSI_TOKEN
  180         | . ZERODBFS_TOKEN
  183 opcode: . T_OPCODE
  184       | . T_FUNCTION
  185 opcodeb: . T_OPCODEB
  186        | . T_FUNCTIONB

    T_OPCODE        shift, and go to state 34
    T_OPCODEB       shift, and go to state 35
    T_FUNCTION      shift, and go to state 36
    T_FUNCTIONB     shift, and go to state 37
    SRATE_TOKEN     shift, and go to state 38
    KRATE_TOKEN     shift, and go to state 39
    KSMPS_TOKEN     shift, and go to state 40
    NCHNLS_TOKEN    shift, and go to state 41
    NCHNLSI_TOKEN   shift, and go to state 42
    ZERODBFS_TOKEN  shift, and go to state 43
    STRING_TOKEN    shift, and go to state 44
    T_IDENT         shift, and go to state 45
    T_IDENTB        shift, and go to state 46
    INTEGER_TOKEN   shift, and go to state 47
    NUMBER_TOKEN    shift, and go to state 48
    '+'             shift, and go to state 49
    '-'             shift, and go to state 50
    '~'             shift, and go to state 51
    '('             shift, and go to state 52
    '!'             shift, and go to state 53

    arrayexpr  go to state 54
    bexpr      go to state 55
    expr       go to state 56
    iexp       go to state 57
    iterm      go to state 58
    ifac       go to state 59
    ident      go to state 60
    identb     go to state 61
    constant   go to state 62
    opcode     go to state 63
    opcodeb    go to state 64


state 4

  181 opcode0: T_OPCODE0 .

    $default  reduce using rule 181 (opcode0)


state 5

  182 opcode0b: T_OPCODE0B .

    $default  reduce using rule 182 (opcode0b)


state 6

   21 @3: .
   26 udodecl: UDOSTART_DEFINITION . @3 udoname @4 ',' @5 UDO_ANS_TOKEN @6 ',' UDO_ARGS_TOKEN NEWLINE @7 statementlist UDOEND_TOKEN NEWLINE

    $default  reduce using rule 21 (@3)

    @3  go to state 65


state 7

   14 @1: .
   16 instrdecl: INSTR_TOKEN . @1 instlist NEWLINE @2 statementlist ENDIN_TOKEN NEWLINE
   17          | INSTR_TOKEN . NEWLINE error

    NEWLINE  shift, and go to state 66

    $default  reduce using rule 14 (@1)

    @1  go to state 67


state 8

   67 goto: GOTO_TOKEN .

    $default  reduce using rule 67 (goto)


state 9

   68 goto: KGOTO_TOKEN .

    $default  reduce using rule 68 (goto)


state 10

   69 goto: IGOTO_TOKEN .

    $default  reduce using rule 69 (goto)


state 11

  162 rident: SRATE_TOKEN .

    $default  reduce using rule 162 (rident)


state 12

  163 rident: KRATE_TOKEN .

    $default  reduce using rule 163 (rident)


state 13

  164 rident: KSMPS_TOKEN .

    $default  reduce using rule 164 (rident)


state 14

  165 rident: NCHNLS_TOKEN .

    $default  reduce using rule 165 (rident)


state 15

  166 rident: NCHNLSI_TOKEN .

    $default  reduce using rule 166 (rident)


state 16

  167 rident: ZERODBFS_TOKEN .

    $default  reduce using rule 167 (rident)


state 17

   50 ans: T_IDENT . error
  170 ident: T_IDENT .

    error  shift, and go to state 68

    S_ADDIN     reduce using rule 170 (ident)
    S_SUBIN     reduce using rule 170 (ident)
    S_MULIN     reduce using rule 170 (ident)
    S_DIVIN     reduce using rule 170 (ident)
    T_OPCODE    reduce using rule 170 (ident)
    T_FUNCTION  reduce using rule 170 (ident)
    ','         reduce using rule 170 (ident)
    '='         reduce using rule 170 (ident)
    '['         reduce using rule 170 (ident)


state 18

   45 statement: UNTIL_TOKEN . bexpr DO_TOKEN statementlist OD_TOKEN
   55 arrayexpr: . arrayexpr '[' iexp ']'
   56          | . ident '[' iexp ']'
   94 bexpr: . '(' bexpr ')'
   95      | . expr S_LE expr
   96      | . expr S_LE error
   97      | . expr S_GE expr
   98      | . expr S_GE error
   99      | . expr S_NEQ expr
  100      | . expr S_NEQ error
  101      | . expr S_EQ expr
  102      | . expr S_EQ error
  103      | . expr '=' expr
  104      | . expr '=' error
  105      | . expr S_GT expr
  106      | . expr S_GT error
  107      | . expr S_LT expr
  108      | . expr S_LT error
  109      | . bexpr S_AND bexpr
  110      | . bexpr S_AND error
  111      | . bexpr S_OR bexpr
  112      | . bexpr S_OR error
  113      | . '!' bexpr
  114      | . '!' error
  115 expr: . bexpr '?' expr ':' expr
  116     | . bexpr '?' expr ':' error
  117     | . bexpr '?' expr error
  118     | . bexpr '?' error
  119     | . iexp
  120 iexp: . iexp '+' iexp
  121     | . iexp '+' error
  122     | . iexp '-' iexp
  123     | . iexp '-' error
  124     | . '-' iexp
  125     | . '-' error
  126     | . '+' iexp
  127     | . '+' error
  128     | . iterm
  129 iterm: . iexp '*' iexp
  130      | . iexp '*' error
  131      | . iexp '/' iexp
  132      | . iexp '/' error
  133      | . iexp '^' iexp
  134      | . iexp '^' error
  135      | . iexp '%' iexp
  136      | . iexp '%' error
  137      | . ifac
  138 ifac: . ident
  139     | . constant
  140     | . arrayexpr
  141     | . iexp '|' iexp
  142     | . iexp '|' error
  143     | . iexp '&' iexp
  144     | . iexp '&' error
  145     | . iexp '#' iexp
  146     | . iexp '#' error
  147     | . iexp S_BITSHIFT_LEFT iexp
  148     | . iexp S_BITSHIFT_LEFT error
  149     | . iexp S_BITSHIFT_RIGHT iexp
  150     | . iexp S_BITSHIFT_RIGHT error
  151     | . '~' iexp
  152     | . '~' error
  153     | . '(' expr ')'
  154     | . '(' expr error
  155     | . '(' error
  156     | . identb exprlist ')'
  157     | . opcode ':' identb exprlist ')'
  158     | . opcode ':' opcodeb exprlist ')'
  159     | . opcodeb exprlist ')'
  160     | . identb error
  161     | . opcodeb error
  170 ident: . T_IDENT
  171 identb: . T_IDENTB
  172 constant: . INTEGER_TOKEN
  173         | . NUMBER_TOKEN
  174         | . STRING_TOKEN
  175         | . SRATE_TOKEN
  176         | . KRATE_TOKEN
  177         | . KSMPS_TOKEN
  178         | . NCHNLS_TOKEN
  179         | . NCHNLSI_TOKEN
  180         | . ZERODBFS_TOKEN
  183 opcode: . T_OPCODE
  184       | . T_FUNCTION
  185 opcodeb: . T_OPCODEB
  186        | . T_FUNCTIONB

    T_OPCODE        shift, and go to state 34
    T_OPCODEB       shift, and go to state 35
    T_FUNCTION      shift, and go to state 36
    T_FUNCTIONB     shift, and go to state 37
    SRATE_TOKEN     shift, and go to state 38
    KRATE_TOKEN     shift, and go to state 39
    KSMPS_TOKEN     shift, and go to state 40
    NCHNLS_TOKEN    shift, and go to state 41
    NCHNLSI_TOKEN   shift, and go to state 42
    ZERODBFS_TOKEN  shift, and go to state 43
    STRING_TOKEN    shift, and go to state 44
    T_IDENT         shift, and go to state 45
    T_IDENTB        shift, and go to state 46
    INTEGER_TOKEN   shift, and go to state 47
    NUMBER_TOKEN    shift, and go to state 48
    '+'             shift, and go to state 49
    '-'             shift, and go to state 50
    '~'             shift, and go to state 51
    '('             shift, and go to state 52
    '!'             shift, and go to state 53

    arrayexpr  go to state 54
    bexpr      go to state 69
    expr       go to state 56
    iexp       go to state 57
    iterm      go to state 58
    ifac       go to state 59
    ident      go to state 60
    identb     go to state 61
    constant   go to state 62
    opcode     go to state 63
    opcodeb    go to state 64


state 19

    0 $accept: orcfile . $end

    $end  shift, and go to state 70


state 20

    1 orcfile: rootstatement .
    2 rootstatement: rootstatement . topstatement
    3              | rootstatement . instrdecl
    4              | rootstatement . udodecl
   16 instrdecl: . INSTR_TOKEN @1 instlist NEWLINE @2 statementlist ENDIN_TOKEN NEWLINE
   17          | . INSTR_TOKEN NEWLINE error
   26 udodecl: . UDOSTART_DEFINITION @3 udoname @4 ',' @5 UDO_ANS_TOKEN @6 ',' UDO_ARGS_TOKEN NEWLINE @7 statementlist UDOEND_TOKEN NEWLINE
   29 topstatement: . rident '=' expr NEWLINE
   30             | . statement
   31 statement: . ident '=' expr NEWLINE
   32          | . ident S_ADDIN expr NEWLINE
   33          | . ident S_SUBIN expr NEWLINE
   34          | . ident S_MULIN expr NEWLINE
   35          | . ident S_DIVIN expr NEWLINE
   36          | . arrayexpr '=' expr NEWLINE
   37          | . arrayident '=' expr NEWLINE
   38          | . ans opcode exprlist NEWLINE
   39          | . opcode0 exprlist NEWLINE
   40          | . opcode0b exprlist ')' NEWLINE
   41          | . LABEL_TOKEN
   42          | . goto label NEWLINE
   43          | . IF_TOKEN bexpr goto label NEWLINE
   44          | . ifthen
   45          | . UNTIL_TOKEN bexpr DO_TOKEN statementlist OD_TOKEN
   46          | . NEWLINE
   47 ans: . ident
   48    | . arrayident
   49    | . arrayexpr
   50    | . T_IDENT error
   51    | . ans ',' ident
   52    | . ans ',' T_IDENT error
   53    | . ans ',' arrayident
   54    | . ans ',' arrayexpr
   55 arrayexpr: . arrayexpr '[' iexp ']'
   56          | . ident '[' iexp ']'
   57 ifthen: . IF_TOKEN bexpr then NEWLINE statementlist ENDIF_TOKEN NEWLINE
   58       | . IF_TOKEN bexpr then NEWLINE statementlist ELSE_TOKEN statementlist ENDIF_TOKEN NEWLINE
   59       | . IF_TOKEN bexpr then NEWLINE statementlist elseiflist ENDIF_TOKEN NEWLINE
   60       | . IF_TOKEN bexpr then NEWLINE statementlist elseiflist ELSE_TOKEN statementlist ENDIF_TOKEN NEWLINE
   67 goto: . GOTO_TOKEN
   68     | . KGOTO_TOKEN
   69     | . IGOTO_TOKEN
  162 rident: . SRATE_TOKEN
  163       | . KRATE_TOKEN
  164       | . KSMPS_TOKEN
  165       | . NCHNLS_TOKEN
  166       | . NCHNLSI_TOKEN
  167       | . ZERODBFS_TOKEN
  168 arrayident: . arrayident '[' ']'
  169           | . ident '[' ']'
  170 ident: . T_IDENT
  181 opcode0: . T_OPCODE0
  182 opcode0b: . T_OPCODE0B

    NEWLINE              shift, and go to state 1
    LABEL_TOKEN          shift, and go to state 2
    IF_TOKEN             shift, and go to state 3
    T_OPCODE0            shift, and go to state 4
    T_OPCODE0B           shift, and go to state 5
    UDOSTART_DEFINITION  shift, and go to state 6
    INSTR_TOKEN          shift, and go to state 7
    GOTO_TOKEN           shift, and go to state 8
    KGOTO_TOKEN          shift, and go to state 9
    IGOTO_TOKEN          shift, and go to state 10
    SRATE_TOKEN          shift, and go to state 11
    KRATE_TOKEN          shift, and go to state 12
    KSMPS_TOKEN          shift, and go to state 13
    NCHNLS_TOKEN         shift, and go to state 14
    NCHNLSI_TOKEN        shift, and go to state 15
    ZERODBFS_TOKEN       shift, and go to state 16
    T_IDENT              shift, and go to state 17
    UNTIL_TOKEN          shift, and go to state 18

    $default  reduce using rule 1 (orcfile)
